--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 /problema1/Problema01/nbproject/private/
+/problema1/Problema01/build/
+/problema2/Ejecutor/nbproject/private/
+/problema2/Ejecutor/build/
+/problema3/Problema03/nbproject/private/
+/problema3/Problema03/build/
+/problema4/Problema04/nbproject/private/
+/problema4/Problema04/build/
