--- a/problema4/Problema04/nbproject/project.properties
+++ b/problema4/Problema04/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Problema01.jar
+dist.jar=${dist.dir}/Problema04.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Problema01
+dist.jlink.output=${dist.jlink.dir}/Problema04
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Problema01
-main.class=problema01.Ejecutor
+jlink.launcher.name=Problema04
+main.class=problema04.Problema04
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
